# modbus-mapping

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
modbus-mapping/: Cargo.toml
modbus-mapping-derive/: Cargo.toml
modbus-mapping-derive/src/: config.rs  entry.rs  lib.rs  mapping.rs  utils.rs
modbus-mapping/examples/: no_macros.rs  rtu_client.rs  rtu_device.rs  tcp_battery.rs  tcp_client.rs  tcp_device.rs
modbus-mapping/src/: codec.rs  core.rs  lib.rs  simulator.rs
