[package]
name = "modbus-mapping"
version = "0.1.0"
edition = "2021"
authors = ["Vladimír Vrábeľ", "vladimir.vrabely@gmail.com"]
description = "Modbus register mapping traits"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
