# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "modbus-mapping",
    "modbus-mapping-derive",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["Vladimír Vrábeľ <vladimir.vrabely@gmail.com>"]
edition = "2021"
rust-version = "1.85.0"
readme = "README.md"
repository = "https://github.com/vladimirvrabely/modbus-mapping"
description = "Modbus register mapping traits and derive macros"
license = "MIT"
keywords = ["modbus", "automation"]
