[package]
name = "modbus-mapping"

authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
modbus-mapping-derive = { version = "0.1.3", path = "../modbus-mapping-derive" }
tokio = { version = "1", features = ["default"] }
tokio-modbus = { version = "0.9", default-features = false, features = ["rtu-server", "tcp-server"] }
tokio-serial = "5.4"


[[example]]
name = "tcp-battery"
path = "examples/tcp_battery.rs"