[package]
name = "modbus-mapping"

authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
modbus-mapping-derive = { version = "0.1.3", path = "../modbus-mapping-derive" }
tokio = { version = "1", features = ["default"] }
tokio-modbus = { version = "0.9", default-features = true}
# Optional
futures = {version = "0.3", optional = true}
tokio-serial = {version = "5.4", optional = true }
tokio-stream = {version = "0.1", optional = true }

[features]
simulator = ["dep:futures", "dep:tokio-serial", "dep:tokio-stream"]
serial = ["dep:tokio-serial"]


[[example]]
name = "tcp-device"
path = "examples/tcp_device.rs"
required-features = ["simulator"]

[[example]]
name = "tcp-client"
path = "examples/tcp_client.rs"

[[example]]
name = "rtu-device"
path = "examples/rtu_device.rs"
required-features = ["simulator", "serial"]

[[example]]
name = "rtu-client"
path = "examples/rtu_client.rs"
required-features = ["serial"]